Removed calls to Class.newInstance()