@@ -18,8 +18,10 @@ public class StockHistory extends HistoryServlet {
     public void init() {
         try {
             String dataSource = StockProperties.getDataSource();
-            Class clazz = Class.forName( dataSource, true, Thread.currentThread().getContextClassLoader());
-            this.ds = (ClosingPriceDataSource)clazz.newInstance();
+            Class<? extends ClosingPriceDataSource> clazz =
+                    Class.forName( dataSource, true, Thread.currentThread().getContextClassLoader())
+                            .asSubclass(ClosingPriceDataSource.class);
+            this.ds = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             getServletContext().log("An exception occurred", e);
         }
